labs/kubernetes/modules/23-gateway-api/manifests/05-filters/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-route
  namespace: lab-gateway
spec:
  parentRefs:
  - name: demo-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /old-store
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /store
        statusCode: 301
